fixed main panel scrolling on firefox https://github.com/IBM-Bluemix/insurance-bot/issues/165

--- a/public/stylesheets/benefit.css
+++ b/public/stylesheets/benefit.css
@@ -9,6 +9,7 @@
   padding-left: 60px;
   display: flex;
   flex: 1;
+  overflow: hidden;
 }
 
 .benefitkit {
